--- a/layouts/shortcodes/gameslist.html
+++ b/layouts/shortcodes/gameslist.html
@@ -1,3 +1,3 @@
 {{ range $.Site.Data.games.data }}
-  | {{ .name }} | {{ .console }} | {{ .completion }} | {{ (print "/games/proof/" .proof) | absURL }}[HERE,window=_blank]
+  | {{ .name }} | {{ .platform }} | {{ .completion }} | {{ delimit ( apply (apply (apply .proof "printf" "/games/proof/%s" ".") "absURL" ".") "printf" "%s[HERE,window=_blank]" "." ) " +\n" }}
 {{ end }}
